--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="text" name="search-term" id="js-search-term" required>
             </br>
             <label for="search-state">Search location</label>
-            <input type="text" name="search-state" id="js-search-state" placeholder="CA" maxlength="2">
+            <input type="text" name="search-state" id="js-search-state" placeholder="CA (optional" maxlength="2">
             </br>
             <label for="max-results">Maximum results to return</label>
             <input type="number" name="max-results" id="js-max-results" value="10">
