--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form id="js-form">
             <label for="search-state">Search by location</label>
             <div class = "input_fields_wrap">
-                <input type="text" name="search-state[]" id="js-search-state" placeholder="State (e.g. CA)" maxlength="2" required>
+                <input type="text" name="search-state[]" class="js-search-state" placeholder="State (e.g. CA)" maxlength="2" required>
                 <button type = "button" class="add_field_button">add</button>
             </div>
             </br>
